# easy_perception_deployment

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .travis.yml  Doxyfile  LICENSE  QUALITY_DECLARATION.md  README.md  coverage.sh  onnxruntime.repos
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: cli_ci_action.yml  gui_ci_action.yml  industrial_ci_action.yml  python_ci_action.yml
Dockerfiles/CPU/: Dockerfile
Dockerfiles/GPU/: Dockerfile
docs/: Doxyfile.in  classEPD_1_1EPDContainer.html  conf.py  dir_16c8cad7a1935f89d54c14afb83e722f.html  dir_5d6237af71ac7ac5b06d922743bf3b38.html  dir_f2c9394854f846828b8ab101a65cb2dd.html  functions_func.html  index.html  index.rst  menudata.js  objects.inv  requirements.txt  search.html  searchindex.js  sitemap.xml
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  annotated.html  classEPD_1_1EPDContainer-members.html  classEPD_1_1EPDContainer.html  classEPD_1_1EPDContainer__coll__graph.map  classEPD_1_1EPDContainer__coll__graph.md5  classEPD_1_1EPDObjectDetection-members.html  classEPD_1_1EPDObjectDetection.html  classEPD_1_1EPDObjectLocalization-members.html  classEPD_1_1EPDObjectLocalization.html  classEPD_1_1EPDObjectTracking-members.html  classEPD_1_1EPDObjectTracking.html  classImageViewer-members.html  classImageViewer.html  classImageViewer__coll__graph.map  classes.html  (+100 more)
docs/api/: Counting.html  Deploy.html  P1Trainer.html  image_viewer.html  message_utils.html  ort_base.html  p1_ort_base.html  p3_ort_base.html
docs/guide/: custom_deploy.rst  custom_p1_train.rst  faq.html  faq.rst  getting_started.html  getting_started.rst  setup.html  setup.rst  test.html  test.rst
docs/search/: all_2.js  all_3.js  all_4.js  classes_0.js  functions_3.js  functions_4.js
easy_perception_deployment/: CHANGELOG.rst  CMakeLists.txt  package.xml  run.bash
easy_perception_deployment/config/: input_image_topic.json  p2_train_verification.json  p3_train_verification.json  session_config.json  usecase_config.json
easy_perception_deployment/data/label_list/: imagenet_classes.txt
easy_perception_deployment/gui/: README.md  epd_gui_env.yml  main.py  requirements.txt  run_test_gui.bash  run_test_gui.sh  run_test_gui_gpu_local_only.bash  test_gui.py  test_gui_gpu_local_only.py
easy_perception_deployment/gui/dataset/: labelme2coco.py
easy_perception_deployment/gui/img/: ICONS8_LICENSE
easy_perception_deployment/gui/lists/: p1_model_list.txt  p2_model_list.txt  p3_model_list.txt
easy_perception_deployment/gui/scripts/: build_launch.sh  deploy.bash  deploy.sh  kill.bash  kill.sh  launch.sh
easy_perception_deployment/gui/trainer/: P1Trainer.py  P2Trainer.py  P3Trainer.py
easy_perception_deployment/gui/trainer/exporter_files/: experimental_install.sh  export_to_p2_onnx.py  export_to_p3_onnx.py  fasterrcnn_export.yaml  maskrcnn_export.yaml  modified_imports.py  remove_initializer.py
easy_perception_deployment/gui/trainer/exporter_files/scripts/: copy_exporter_files.bash  copy_op.bash  copy_p3_files.bash  create_exporter_docker_container.bash  create_p3exporter_docker_container.bash  deploy_p3exporter_exporter.bash  install_op.bash  install_p2exporter.bash  install_p2exporter.sh  install_p3exporter.bash  install_p3exporter.sh  prepare_exporter_docker_container.bash  prepare_p3exporter_docker_container.bash  run_exporter.bash  run_op.bash  run_p2exporter.bash  run_p2exporter.sh  run_p3exporter.bash  run_p3exporter.sh
easy_perception_deployment/gui/trainer/training_files/: fasterrcnn_training.yaml  maskrcnn_training.yaml  modified_imports.py  modified_paths_catalog.py  prepare_pretrained_weights.sh  trim_faster_rcnn.py  trim_mask_rcnn.py
easy_perception_deployment/gui/trainer/training_files/scripts/: copy_op.bash  copy_p3_files.bash  copy_p3trainfarm_training_files.bash  copy_training_files.bash  create_p3trainfarm_docker_container.bash  create_trainfarm_docker_container.bash  deploy_p3trainfarm_training.bash  install_op.bash  install_p2trainfarm.bash  install_p2trainfarm.sh  install_p3trainfarm.bash  install_p3trainfarm.sh  prepare_p3trainfarm_docker_container.bash  prepare_trainfarm_docker_container.bash  run_op.bash  run_p2trainfarm.bash  run_p2trainfarm.sh  run_p3trainfarm.bash  run_p3trainfarm.sh  run_training.bash
easy_perception_deployment/gui/windows/: Counting.py  Deploy.py  Main.py  Tracking.py  Train.py
easy_perception_deployment/include/epd_utils_lib/: easy_perception_deployment.hpp  epd_container.cpp  epd_container.hpp  image_viewer.hpp  message_utils.hpp  processor.hpp  usecase_config.hpp
easy_perception_deployment/include/ort_cpp_lib/: ort_base.cpp  ort_base.hpp  p1_ort_base.cpp  p1_ort_base.hpp  p2_ort_base.cpp  p2_ort_base.hpp  p3_ort_base.cpp  p3_ort_base.hpp
easy_perception_deployment/launch/: run.launch.py
easy_perception_deployment/scripts/: build_local.bash  config_epd.py  create_desktop_shortcut.bash  create_desktop_shortcut.sh  install_dep_cpu.bash  install_dep_cpu.sh  install_dep_gpu.bash  install_ort_cpu_ci.sh  local_build.bash  local_run.bash  purge_trainer_exporter.bash  run_local.bash  test_config_epd.py
easy_perception_deployment/scripts/cli/: config_epd.py
easy_perception_deployment/src/: image_viewer.cpp  main.cpp  processor.cpp
easy_perception_deployment/test/: p1u0a.cpp  p2u1a.cpp  p2u1v.cpp  p2u2a.cpp  p3u1v.cpp  p3u2a.cpp  p3u2v.cpp  p3u3a.cpp  p3u3v.cpp  p3u4a.cpp  p3u4v.cpp  teabox_class.txt  test_P1Model.cpp  test_P2Model_action.cpp  test_P2Model_visualize.cpp  test_P3Model_action.cpp  test_P3Model_visualize.cpp  test_easy_perception_deployment.cpp  test_init.cpp  test_invalid_usecase.cpp  test_processor.cpp
easy_perception_deployment/test/custom_dataset/train_dataset/: annotations.json
easy_perception_deployment/test/custom_dataset/val_dataset/: annotations.json
epd_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
epd_msgs/msg/: EPDImageClassification.msg  EPDObjectDetection.msg  EPDObjectLocalization.msg  EPDObjectTracking.msg  LocalizedObject.msg
epd_msgs/srv/: EPDObjectLocalizationService.srv  Perception.srv  Trigger.srv
(+381 files in other folders)
