<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>easy_perception_deployment</name>
  <version>0.1.0</version>
  <description>A ROS2 package that accelerates the training and deployment of CV models in industries</description>
  <maintainer email="beyhy94@gmail.com">rosi</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>epd_msgs</build_depend>
  <build_depend>epd_onnxruntime_vendor</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>tf2</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
